2014-01-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-preview-message): Switch to the original
	buffer when translation fails.  Moreover, kill temporary buffer
	if mime-edit-debug is nil.

2014-01-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-debug): New variable.
	(mime-edit-translate-buffer): Do not undo if above variable is
	non-nil.

2014-01-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-translate-buffer): Undo buffer when
	translation fails and buffer is modified.  Do not catch
	mime-edit-error tag, because no one throws in SEMI-EPG.
	(mime-edit-sign-pgp-mime, mime-edit-encrypt-pgp-mime)
	(mime-edit-sign-smime, mime-edit-encrypt-smime): Remove
	condition-case.

2014-01-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Prevent mime-w3m-insinuate function from
	modifying mime-preview-condition and
	mime-view-type-subtype-score-alist.  Make mime-w3m-insinuate
	function to mofidy mime-view-text/html-previewer's value.

2014-01-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	More customizable text/html entity handling.  Now you can switch
	text/html entity previewer and score by modifying
	mime-view-text/html-previewer and mime-view-text/html-score
	real-time.

	* mime-view.el (mime-view-text/html-score)
	(mime-view-text/html-previewer-alist)
	(mime-view-text/html-previewer): New variables.
	(mime-preview-condition): Set up for text/html entity.
	(mime-display-text/html-previewer-params)
	(mime-display-text/html): New functions.
	(mime-view-text/html-entity-score): New function.
	(mime-view-type-subtype-score-alist): Update for text/html entity.

	* semi-setup.el (mime-html-previewer-alist)
	(mime-setup-enable-inline-html): Obsolete.  Use
	mime-view-text/html-previewer-alist and
	mime-view-text/html-previewer respectively.

2014-01-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-type-subtype-score-alist): Accept
	variable as an alternate of score and function.  Remove